--- a/파이썬5일차.ipynb
+++ b/파이썬5일차.ipynb
@@ -4663,7 +4663,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "eba7cc1a",
+   "id": "f6a9fb42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27757,7 +27757,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "665c96b1",
+   "id": "f66bb067",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28690,7 +28690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "424dcf3d",
+   "id": "dac88006",
    "metadata": {},
    "source": [
     "# 전월세 = 전세/월세 -전세 월세 뽑아서 데이터프레임 만들기\n",
@@ -28704,7 +28704,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "99567e7a",
+   "id": "43a4a727",
    "metadata": {},
    "outputs": [
     {
@@ -28727,7 +28727,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d748ac48",
+   "id": "b242209c",
    "metadata": {},
    "outputs": [
     {
@@ -28750,7 +28750,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a64d4feb",
+   "id": "81bb2809",
    "metadata": {},
    "outputs": [
     {
@@ -28771,7 +28771,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "5984726e",
+   "id": "56ee6349",
    "metadata": {},
    "outputs": [
     {
@@ -28802,7 +28802,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "a8062312",
+   "id": "5cbf3aa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28812,7 +28812,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "21de127d",
+   "id": "71423e63",
    "metadata": {},
    "outputs": [
     {
@@ -29071,7 +29071,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "bee069b8",
+   "id": "70089a88",
    "metadata": {},
    "outputs": [
     {
@@ -29330,7 +29330,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "fe44d534",
+   "id": "4875061e",
    "metadata": {},
    "outputs": [
     {
@@ -29536,7 +29536,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "11ac7931",
+   "id": "7ab67f40",
    "metadata": {},
    "outputs": [
     {
@@ -29742,7 +29742,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "5470aa5c",
+   "id": "0ab835f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29752,7 +29752,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "4fa46431",
+   "id": "b7cd48c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29762,7 +29762,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "0fa3d70f",
+   "id": "c53acc3a",
    "metadata": {},
    "outputs": [
     {
@@ -29994,7 +29994,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "c3a91c80",
+   "id": "1ffa67bd",
    "metadata": {},
    "outputs": [
     {
@@ -30198,7 +30198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94688713",
+   "id": "987e6909",
    "metadata": {},
    "source": [
     "# conda install cx_oracle\n",
@@ -30207,8 +30207,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "id": "4281bd96",
+   "execution_count": 9,
+   "id": "fd37ed40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "511ae8e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30217,8 +30227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "edf9eb09",
+   "execution_count": 2,
+   "id": "4b203064",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30227,13 +30237,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "id": "b0e0cb74",
+   "execution_count": 11,
+   "id": "333784b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "dsn = cx_Oracle.makedsn('localhost',1521,'xe')\n",
-    "db = cx_Oracle.connect(user = 'ICIA', password='1234',dsn=dsn)\n",
+    "db = cx_Oracle.connect(user = 'LOL', password='1234',dsn=dsn)\n",
     "sql_oracle = db.cursor()\n",
     "\n",
     "#오라클"
@@ -30241,8 +30251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "id": "2ce71ba9",
+   "execution_count": 12,
+   "id": "ca7898da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30253,8 +30263,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
-   "id": "961ed723",
+   "execution_count": 5,
+   "id": "d4cb2665",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30263,8 +30273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
-   "id": "eeacced4",
+   "execution_count": 13,
+   "id": "7237b480",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30273,8 +30283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "id": "5588eeb9",
+   "execution_count": 6,
+   "id": "8afe30e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30283,8 +30293,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "id": "23f85e29",
+   "execution_count": 7,
+   "id": "c71dc736",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30293,8 +30303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "6ee8c5c4",
+   "execution_count": 14,
+   "id": "8dee2fbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30303,18 +30313,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "id": "90639dff",
+   "execution_count": 10,
+   "id": "5d02463a",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\Anaconda3\\lib\\site-packages\\pandas\\io\\sql.py:762: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -30351,7 +30353,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30362,8 +30364,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "id": "b18cbfae",
+   "execution_count": 15,
+   "id": "afdeba4d",
    "metadata": {},
    "outputs": [
     {
@@ -30372,7 +30374,7 @@
        "0"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30383,8 +30385,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
-   "id": "ff01c105",
+   "execution_count": 16,
+   "id": "73dc642e",
    "metadata": {},
    "outputs": [
     {
@@ -30423,7 +30425,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30435,7 +30437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5321df2",
+   "id": "8912ecda",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30443,7 +30445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67661d40",
+   "id": "675ff743",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30451,7 +30453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35f065a7",
+   "id": "c8084e1e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30459,7 +30461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac6dbf13",
+   "id": "88422544",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30467,7 +30469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "168d97f2",
+   "id": "8e2239fc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30475,7 +30477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dcac675",
+   "id": "2378f093",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30483,7 +30485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8a65dd4",
+   "id": "efd15d74",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30491,7 +30493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "357e3354",
+   "id": "56a2c20b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30499,7 +30501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9548fa9",
+   "id": "0252cdc3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30507,7 +30509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "405e0d85",
+   "id": "af13593b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30515,7 +30517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87ceff75",
+   "id": "d29fbfc6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30523,7 +30525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeede824",
+   "id": "20a4b8c6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30531,7 +30533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c0a443d",
+   "id": "ca6acb0d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30539,7 +30541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "334b8e75",
+   "id": "889404f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30547,7 +30549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a50ac5e",
+   "id": "6a7dfc34",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30569,7 +30571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
