--- a/파이썬3일차.ipynb
+++ b/파이썬3일차.ipynb
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "5e68accb",
    "metadata": {},
    "outputs": [],
@@ -463,23 +463,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "60f9001a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'녹턴', '다리우스', '럼블', '세트', '트위치'}"
+       "['녹턴', '세트', '트위치', '다리우스', '럼블']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "set(list_tmp) #중복제거"
+    "list(set(list_tmp)) #중복제거"
    ]
   },
   {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "39660bba",
    "metadata": {},
    "outputs": [],
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "29f2c8c7",
    "metadata": {},
    "outputs": [],
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "f03886e8",
    "metadata": {},
    "outputs": [
@@ -1369,7 +1369,7 @@
        "1     Mid           조이      4       2        1"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
