--- a/파이썬12일차.ipynb
+++ b/파이썬12일차.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "18252aba",
+   "execution_count": 2,
+   "id": "17f3b8a3",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_4980\\3501253536.py:9: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_9520\\3501253536.py:9: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
       "  import imp\n"
      ]
     }
@@ -32,6 +32,17 @@
     "import plotly.express as px\n",
     "imp.reload(mu)\n",
     "tqdm.pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "515960e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = mu.connect_mysql('icia')\n",
+    "conn.close()"
    ]
   },
   {
